# load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

# git_repository(
#     name = "rules_qt",
#     commit = "14d24ecc951323f59dd142745adfa82f97c53f9d",
#     remote = "https://github.com/Sayter99/rules_qt6.git",
# )

# load("@rules_qt//:fetch_qt.bzl", "fetch_qt6")

# fetch_qt6()

# load("@rules_qt//tools:qt_toolchain.bzl", "register_qt_toolchains")

# register_qt_toolchains()
